# noc_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  analysis.py  client.py  explainability.py  gym_env.py  incidents.py  inference.py  models.py  openenv.yaml  pyproject.toml  simulator.py  validate-submission.sh
demo/: app.py
models/logs/: evaluations.npz
server/: Dockerfile  __init__.py  app.py  noc_agent_environment.py
training/: train.py
wandb/: latest-run
wandb/run-20260404_145621-jfj6hy8y/: run-jfj6hy8y.wandb
wandb/run-20260404_145711-snpl21zz/: run-snpl21zz.wandb
wandb/run-20260404_145711-snpl21zz/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
